Prepare for 2.0 (#179)
* IS-178 Code cleanup
* IS-178 Release notes